--- a/css/main.css
+++ b/css/main.css
@@ -97,11 +97,16 @@ footer {
   flex-flow: row wrap;
 }
 
+header {
+  padding: 15px 0;
+}
+
 header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
 }
 
 header nav {
@@ -109,11 +114,17 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 45%;
+}
+
+.header-divider{
+  width: 100%
 }
 
 footer .social-icons {
@@ -126,6 +137,23 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .copyright {
+  margin: 20px 0;
+}
+
+.content-wrapper {
+  width: 90%;
 }
 
 
@@ -148,6 +176,14 @@ aside {
   flex-flow: row wrap;
 }
 
+.form-description {
+  padding: 15px 0;
+}
+
+.form {
+  padding-bottom: 50px;
+}
+
 /* FEATURES */
 
 .features {
@@ -163,6 +199,18 @@ aside {
   flex-flow: row wrap;
 }
 
+.features article {
+  width: 55%;
+  margin: 30px 0;
+}
+
+.features p {
+  margin: 0;
+}
+
+.features h2{
+  margin-bottom: 60px;
+}
 
 /* REVIEWS */
 
@@ -170,6 +218,15 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+}
+
+.reviews h2 {
+  margin-bottom: 40px;
+}
+
+.reviews h3 {
+  width: 50%;
+  margin: 20px 0;
 }
 
 
@@ -189,6 +246,10 @@ aside {
   flex-flow: row wrap;
 }
 
+.contact-content p {
+  margin: 0;
+}
+
 
 /* --------- Mobile Styles - FAQ Page --------- */
 
@@ -204,6 +265,15 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin-top: 50px;
+}
+
+.faq h2 {
+  margin-bottom: 40px;
+}
+
+.faq-content {
+  margin-bottom: 50px;
 }
 
 
