--- a/css/main.css
+++ b/css/main.css
@@ -461,7 +461,7 @@ aside {
   }
 
 
-  /* --------- About Page --------- */
+  /* --------- About Page - Tablet --------- */
 
   .mission-content {
     display: flex;
@@ -486,7 +486,7 @@ aside {
   }
 
 
-   /* --------- FAQ Page --------- */
+   /* --------- FAQ Page - Tablet  --------- */
 
    .faq .content-wrapper {
     justify-content: space-between;
@@ -503,6 +503,58 @@ aside {
 
 @media only screen and (min-width: 1200px) {
   
+  /* General Styles */
+
+  .content-wrapper {
+    max-width: 960px;
+  }
+
+  /* Hero */
+
+  .hero-area h1 {
+    width: 70%;
+  }
+
+  /* Aside */
+
+  aside .content-wrapper {
+    justify-content: space-around;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 33%;
+  }
+
+  /* Features */
+
+  .features h2 {
+    width: 88%;
+  }
+
+  .features article {
+    flex-basis: 30%;
+  }
+
+  /* Reviews */
+  .reviews article div {
+    width: 44%;
+  }
+
+
+   /* --------- About Page - Desktop --------- */
+
+   .mission h2,
+   .contact-section .content-wrapper h2 {
+    width: 100%;
+   }
+
+
+   /* --------- FAQ Page - Desktop --------- */
+
+   .faq h2 {
+    width: 100%;
+   }
 }
 
 /* ==========================================================================
