--- a/css/main.css
+++ b/css/main.css
@@ -130,11 +130,11 @@ p {
 }
 
 img {
-
+  width: 100%;
 }
 
 figure {
-
+  margin: 0;
 }
 
 address {
@@ -176,7 +176,6 @@ header nav {
   align-items: center;
   flex-flow: row wrap;
   width: 100%;
-  border-top: solid 1px #3a3a3a;
 }
 
 header nav ul {
@@ -185,10 +184,22 @@ header nav ul {
   width: 50%;
   font-weight: bold;
   padding: 0;
+  margin: 0;
 }
 
-.header-divider{
-  width: 100%
+.header-divider {
+  width: 100%;
+  background: #3a3a3a;
+  height: 1px;
+  margin: 10px 0 20px 0;
+}
+
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 footer .social-icons {
@@ -217,7 +228,6 @@ footer .copyright {
 }
 
 
-
 /* --------- Mobile Styles - Homepage --------- */
 
 /* HERO */
@@ -226,6 +236,8 @@ footer .copyright {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url('../img/unplugged-homepage-hero.jpg') center no-repeat;
+  background-size: cover;
 }
 
 h1 {
@@ -285,6 +297,8 @@ input[type=button] {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url(../img/unplugged-features.jpg) center no-repeat;
+  background-size: cover;
 }
 
 .features .features-items {
@@ -498,6 +512,10 @@ input[type=button] {
     display: none;
   }
 
+  header figure {
+    width: 30%;
+  }
+
   /* Aside */
 
   aside .content-wrapper {
@@ -531,12 +549,14 @@ input[type=button] {
 
   .reviews article {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
   }
 
-  .reviews article div {
-    width: 50%;
+  .reviews article div,
+  .reviews article figure {
+    width: 49%;
   }
+
 
   /* Footer */
 
