Added iframe styles for tablet and desktop

--- a/css/main.css
+++ b/css/main.css
@@ -609,6 +609,10 @@ input[type=button] {
     padding-right: 30px;
   }
 
+  .map figure {
+    padding-bottom: 46%
+  }
+
   .contact-section .content-wrapper h2 {
     width: 80%;
   }
@@ -682,6 +686,10 @@ input[type=button] {
    .mission h2,
    .contact-section .content-wrapper h2 {
     width: 100%;
+   }
+
+   .map figure {
+    padding-bottom: 38%
    }
 
 
