--- a/css/main.css
+++ b/css/main.css
@@ -322,6 +322,11 @@ input[type=button] {
   width: 94%;
 }
 
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
+}
+
 /* REVIEWS */
 
 .reviews {
