--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,11 @@ header figure {
   flex-flow: row wrap;
 }
 
+footer {
+  text-align: center;
+  flex-direction: column;
+}
+
 footer .social-icons {
   display: flex;
   justify-content: space-around;
@@ -212,6 +217,10 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #527158;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
 }
 
 footer .content-wrapper {
@@ -315,6 +324,7 @@ input[type=button] {
 
 .features p {
   margin: 0;
+  text-align: center;
 }
 
 .features h2{
