--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,7 @@ h2 {
   font-size: 1.875em;
   color: #e2e3ed;
   font-weight: normal;
+  line-height: 1.2em;
 }
 
 h3,
@@ -125,7 +126,7 @@ h4 {
 
 p {
   font-size: 0.875em;
-  line-height: 1.285em;
+  line-height: 1.4em;
   color: #e2e3ed;
 }
 
@@ -223,9 +224,23 @@ footer .social-icons p {
   height: 40px;
 }
 
+footer .social-icons p i {
+  font-size: 1.3125em;
+}
+
 footer .content-wrapper {
   width: 55%;
-  margin: 50px 0;
+  margin-top: 50px;
+  margin-bottom: 35px;
+}
+
+footer .contact h4 {
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+
+footer .social h4 {
+  margin-top: 40px;
 }
 
 footer p {
@@ -247,6 +262,7 @@ footer .copyright {
   flex-flow: row wrap;
   background: url('../img/unplugged-homepage-hero.jpg') center no-repeat;
   background-size: cover;
+  height: 500px;
 }
 
 h1 {
@@ -254,6 +270,8 @@ h1 {
   font-size: 2.25em;
   color: #e2e3ed;
   font-weight: normal;
+  margin: 0;
+  line-height: 1.2em;
 }
 
 /* ASIDE */
@@ -266,8 +284,20 @@ aside {
   background: #527158;
 }
 
+aside .content-wrapper {
+  margin: 0;
+}
+
 .form-description {
   padding: 15px 0;
+}
+
+.form-description h3 {
+  margin-bottom: 0px;
+}
+
+.form-description p {
+  margin-top: 7px;
 }
 
 .form {
@@ -275,7 +305,7 @@ aside {
 }
 
 aside .form {
-  margin-top: 30px;
+  margin-top: 15px;
 }
  
 input[type=text] {
@@ -334,7 +364,7 @@ input[type=button] {
 
 .features i {
   font-size: 3.75em;
-  margin-bottom: 40px;
+  margin-bottom: 35px;
 }
 
 /* REVIEWS */
@@ -347,13 +377,18 @@ input[type=button] {
 }
 
 .reviews h2 {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+  margin-top: 0;
   width: 94%;
 }
 
 .reviews h3 {
-  width: 50%;
+  width: 55%;
   margin: 20px 0;
+}
+
+.reviews p {
+  margin: 0;
 }
 
 
@@ -365,6 +400,10 @@ input[type=button] {
   align-items: center;
   flex-flow: row wrap;
   background: #527158;
+}
+
+.mission h2 {
+  margin: 0;
 }
 
 .map figure {
@@ -389,6 +428,10 @@ input[type=button] {
   align-items: center;
   flex-flow: row wrap;
   background: #2a423a;
+}
+
+.contact-content h4 {
+  margin-bottom: 12px;
 }
 
 .contact-content p {
@@ -416,6 +459,15 @@ input[type=button] {
 
 .faq h2 {
   margin-bottom: 40px;
+  margin-top: 0;
+}
+
+.faq h4 {
+  margin: 0;
+}
+
+.faq p {
+  margin: 7px 0;
 }
 
 .faq-content {
@@ -517,7 +569,28 @@ input[type=button] {
 
   .content-wrapper {
     max-width: 640px;
-    margin: 100px 0;
+    margin: 80px 0;
+  }
+
+  h1 {
+    font-size: 3em;
+  }
+
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.3em;
+  }
+
+  h3 {
+    font-size: 1.5em;
+  }
+
+  h4 {
+    font-size: 1.286em;
+  }
+
+  p {
+    font-size: 0.875em;
   }
 
   /* Header */
@@ -529,14 +602,15 @@ input[type=button] {
   header .content-wrapper {
     width: 100%;
     justify-content: space-between;
+    margin: 15px 0;
   }
 
   header nav {
     width: 30%;
   }
 
-  header nav ul {
-    justify-content: space-between;
+  header nav ul li {
+    margin-left: 35px;
   }
 
   .header-divider {
@@ -547,10 +621,18 @@ input[type=button] {
     width: 30%;
   }
 
+  /* Hero */
+
+  .hero-area {
+    height: 600px;
+  }
+
+
   /* Aside */
 
   aside .content-wrapper {
-    margin: 50px 0;
+    margin-top: 30px;
+    margin-bottom: 15px;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
@@ -562,14 +644,32 @@ input[type=button] {
     margin: 0;
   }
 
+  .form-description h3 {
+    margin-top: 12px;
+  }
+
+  .form-description p {
+    padding: 5px 65px 0 0;
+  }
+
   /* Features */
+
+  .features h2 {
+    margin: 0;
+    width: 100%;
+  }
 
   .features article {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     flex-basis: 320px;
+  }
+
+  .features i {
+    font-size: 4.5em;
+    margin-bottom: 25px;
   }
 
   .features .features-item-description {
@@ -581,6 +681,15 @@ input[type=button] {
   .reviews article {
     display: flex;
     justify-content: space-between;
+  }
+
+  .reviews h2 {
+    width: 77%;
+  }
+
+  .reviews h3 {
+    width: 100%;
+    margin-top: 0;
   }
 
   .reviews article div,
@@ -600,6 +709,16 @@ input[type=button] {
     display: flex;
     justify-content: space-around; 
     align-items: center;
+    flex-direction: row;
+  }
+
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
+  }
+
+  footer .social h4 {
+    margin-top: 15px;
   }
 
   footer .contact {
@@ -607,7 +726,7 @@ input[type=button] {
   }
 
   footer .copyright {
-    width: 30%;
+    width: 100%;
   }
 
 
@@ -619,9 +738,14 @@ input[type=button] {
     align-items: center;
   }
 
+  .mission h2 {
+    width: 95%;
+  }
+
   .mission-content p {
     width: 50%;
     padding-right: 30px;
+    margin-top: 30px;
   }
 
   .map figure {
@@ -630,6 +754,7 @@ input[type=button] {
 
   .contact-section .content-wrapper h2 {
     width: 80%;
+    margin: 12px 0;
   }
 
   .contact-content {
@@ -644,6 +769,7 @@ input[type=button] {
 
    .faq .content-wrapper {
     justify-content: space-between;
+    margin-top: 100px;
    }
 
    .faq-content {
@@ -652,6 +778,10 @@ input[type=button] {
 
    .faq h2 {
     width: 100%;
+   }
+
+   .faq h4 {
+    font-size: 0.875em;
    }
 }
 
@@ -663,27 +793,51 @@ input[type=button] {
     max-width: 960px;
   }
 
+  h1 {
+    font-size: 3.75em;
+  }
+
+  h2 {
+    font-size: 3em;
+  }
+
+  h3,
+  h4 {
+    font-size: 1.875em;
+  }
+
+  p {
+    font-size: 1.125em;
+  }
+
   /* Hero */
 
   .hero-area h1 {
     width: 70%;
+    margin-top: 0;
+  }
+
+  .hero-area .content-wrapper {
+    margin-top: 50px;
   }
 
   /* Aside */
 
   aside .content-wrapper {
     justify-content: space-around;
+    margin-top: 20px;
   }
 
   aside .content-wrapper .form-description,
   aside .content-wrapper .form {
-    width: 33%;
+    width: 40%;
   }
 
   /* Features */
 
   .features h2 {
     width: 88%;
+    margin-bottom: 70px;
   }
 
   .features article {
@@ -692,7 +846,11 @@ input[type=button] {
 
   /* Reviews */
   .reviews article div {
-    width: 44%;
+    width: 48%;
+  }
+
+  .reviews h2 {
+    margin-bottom: 70px;
   }
 
 
